//
// Created by azex on 8/9/26.
//

#ifndef MEDICALCLINIC_STATUSABLE_H
#define MEDICALCLINIC_STATUSABLE_H


class Statusable
{
};


#endif //MEDICALCLINIC_STATUSABLE_H
